@@ -1,11 +1,14 @@
 package com.example.demo.utils;
 
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.List;
 
+
+import org.springframework.stereotype.Component;
+@Component("ug")
 public class UserGenerator extends Proxy {
     public String makeUserid(){
-        var tx = List.of("a", "b", "c", "d", "e", "f", 
+        var tx = Arrays.asList("a", "b", "c", "d", "e", "f", 
                                             "g", "h", "i", "j", "k", "l", "n", "m", "o",
                                             "p", "q", "r", "s", "t", "u", "v", "w", "x",
                                             "y", "z", "1", "2", "3", "4", "5", "6", "7",
